--- a/335-02-Cragels-p2/sort-race.html
+++ b/335-02-Cragels-p2/sort-race.html
@@ -7,6 +7,7 @@
         <style> body {padding: 0; margin: 0;} </style>
         <script src="p5.js"></script>
         <script src="p2_sort-race.js"></script>
+        <script src="quicksort.js"></script>
     </head>
     <body>
         <h1>Sort Race</h1>
