--- a/335-02-Cragels-p2/sort-race.html
+++ b/335-02-Cragels-p2/sort-race.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +8,7 @@
         <script src="p5.js"></script>
         <script src="p2_sort-race.js"></script>
         <script src="quicksort.js"></script>
+        <script src="mergesort.js"></script>
     </head>
     <body>
         <h1>Sort Race</h1>
